force-app/main/default/objects/School_Assets__c.object
<CustomObject>
    <fields>
        <fullName>Accessories__c</fullName>
        <label>Accessories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>Data Cable</fullName>
                </value>
                <value>
                    <fullName>Installation CD</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Memory Card</fullName>
                </value>
                <value>
                    <fullName>Power Cable</fullName>
                </value>
                <value>
                    <fullName>Protective Cover</fullName>
                </value>
                <value>
                    <fullName>Stand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternative_Tag__c</fullName>
        <label>Alternative Tag #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <formula>IF(Status_Update_Not_Returned__c &lt;&gt; 0, &quot;Not Returned&quot;,

IF(Status_Update_Stolen__c &lt;&gt; 0, &quot;Stolen&quot;,

IF(Status_Update_Sold__c &lt;&gt; 0, &quot;Sold&quot;,

IF(Status_Update_Lost__c &lt;&gt; 0, &quot;Lost&quot;,

IF(Status_Update_In_Use__c &lt;&gt; 0, &quot;In Use&quot;,

IF( Disposed_Of__c = TRUE, &quot;Disposed Of&quot;,

IF(AND(Count_Active_Asset_Custodies__c = 0, Status_Update_Stolen__c = 0,  Status_Update_Sold__c = 0,  Status_Update_Not_Returned__c = 0,  Status_Update_Lost__c = 0), &quot;In Stock&quot;, &quot;&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Computer_Model__c</fullName>
        <label>Computer Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Chromebook</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_Active_Asset_Custodies__c</fullName>
        <label>Count Active Asset Custodies</label>
        <summaryFilterItems>
            <field>Asset_Custody__c.Status__c</field>
            <operation>equals</operation>
            <value>On Loan, Not returned</value>
        </summaryFilterItems>
        <summaryForeignKey>Asset_Custody__c.School_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Asset_Custodies__c</fullName>
        <label>Count Asset Custodies</label>
        <summaryForeignKey>Asset_Custody__c.School_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <formula>IF(OR(AND(TEXT(Status__c) &lt;&gt; &quot;In Use&quot;, TEXT(Status__c) &lt;&gt; &quot;In Stock&quot;, TEXT(Status__c) &lt;&gt; &quot;Not returned&quot;), Expected_Life_Years__c = 0),0, IF((Purchase_Price__c -((TODAY()- Purchase_Date__c )/( Expected_Life_Years__c *365)) * Purchase_Price__c )&lt;0,0,IF((Purchase_Price__c -((TODAY()- Purchase_Date__c )/( Expected_Life_Years__c *365)) * Purchase_Price__c )&gt;Purchase_Price__c,Purchase_Price__c,(Purchase_Price__c -((TODAY()- Purchase_Date__c )/( Expected_Life_Years__c *365)) * Purchase_Price__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If current value = 0 and you think it should be otherwise, please check that the 4 fields above contain a value</inlineHelpText>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Damage_or_Imperfection__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Damages or Imperfections</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disposed_Of__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disposed Of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Life_Years__c</fullName>
        <label>Expected Life (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FAR_Current_Value__c</fullName>
        <formula>IF(
   OR(
      FAR_Lifetime_Number__c  = 0,
      (Purchase_Price__c -((TODAY()- Purchase_Date__c )/( FAR_Lifetime_Number__c *365)) * Purchase_Price__c)&lt;0),
      0,
        (Purchase_Price__c -((TODAY()- Purchase_Date__c )/( FAR_Lifetime_Number__c *365)) * Purchase_Price__c)
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on the Purchase Price and FAR Expected Lifetime. Current Value calculates depreciation in a straight line.</inlineHelpText>
        <label>FAR Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAR_Expected_Lifetime__c</fullName>
        <description>Used for calculations of the current asset value for FAR reports for Finance department</description>
        <label>FAR Expected Lifetime</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAR_Lifetime_Number__c</fullName>
        <formula>CASE ( TEXT(FAR_Expected_Lifetime__c),
&quot;5 Years&quot;, 5,
&quot;3 Years&quot;, 3,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAR Lifetime Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Text_Agreement__c</fullName>
        <formula>IF (
    TEXT(Type_Drill_Down__c) = &quot;Tablet&quot;,
    &quot;3 years&quot;,
    &quot;4 years&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifetime Text (Agreement)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Used__c</fullName>
        <formula>IF(
  ( Status_Update_In_Use__c +  Status_Update_Lost__c +  Status_Update_Not_Returned__c +  Status_Update_Sold__c +  Status_Update_Stolen__c ) &gt; 0, 
  &quot;Used&quot;, 
  &quot;New&quot;
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New / Used</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Invoice__c</fullName>
        <label>Purchase Invoice #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Owner:User.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Model__c</fullName>
        <label>Screen Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Size__c</fullName>
        <label>Screen Size</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_Drill_Down__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>11&quot;</fullName>
                </value>
                <value>
                    <fullName>13&quot;</fullName>
                </value>
                <value>
                    <fullName>15&quot;</fullName>
                </value>
                <value>
                    <fullName>17&quot;</fullName>
                </value>
                <value>
                    <fullName>19&quot;</fullName>
                </value>
                <value>
                    <fullName>21&quot;</fullName>
                </value>
                <value>
                    <fullName>24&quot;</fullName>
                </value>
                <value>
                    <fullName>27&quot;</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screen_Warranty_End_Date__c</fullName>
        <label>Screen Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Screen__c</fullName>
        <label>Screen</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_Drill_Down__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Licenses__c</fullName>
        <label>Software Licenses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Operating System</fullName>
                </value>
                <value>
                    <fullName>Microsoft Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Update_In_Use__c</fullName>
        <label>Status Update In Use</label>
        <summaryFilterItems>
            <field>Asset_Custody__c.Status__c</field>
            <operation>equals</operation>
            <value>On Loan, Used in Trolley</value>
        </summaryFilterItems>
        <summaryForeignKey>Asset_Custody__c.School_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status_Update_Lost__c</fullName>
        <label>Status Update Lost</label>
        <summaryFilterItems>
            <field>Asset_Custody__c.Status__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Asset_Custody__c.School_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status_Update_Not_Returned__c</fullName>
        <label>Status Update Not Returned</label>
        <summaryFilterItems>
            <field>Asset_Custody__c.Status__c</field>
            <operation>equals</operation>
            <value>Not returned</value>
        </summaryFilterItems>
        <summaryForeignKey>Asset_Custody__c.School_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status_Update_Sold__c</fullName>
        <label>Status Update Sold</label>
        <summaryFilterItems>
            <field>Asset_Custody__c.Status__c</field>
            <operation>equals</operation>
            <value>Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>Asset_Custody__c.School_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status_Update_Stolen__c</fullName>
        <label>Status Update Stolen</label>
        <summaryFilterItems>
            <field>Asset_Custody__c.Status__c</field>
            <operation>equals</operation>
            <value>Stolen</value>
        </summaryFilterItems>
        <summaryForeignKey>Asset_Custody__c.School_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>In Stock</fullName>
                    <default>true</default>
                    <label>In Stock</label>
                </value>
                <value>
                    <fullName>Disposed Of</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Stolen</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Not returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Supplier__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>School Assets (Supplier)</relationshipLabel>
        <relationshipName>School_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Accesories__c</fullName>
        <formula>IF(ISNULL( Accessories__c ),&quot;&quot;,&quot;Accessories:&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Accesories</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Drill_Down__c</fullName>
        <label>Type Drill-Down</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Boat</fullName>
                </value>
                <value>
                    <fullName>Book</fullName>
                </value>
                <value>
                    <fullName>Bookshelf</fullName>
                </value>
                <value>
                    <fullName>Camera</fullName>
                </value>
                <value>
                    <fullName>Coffee Machine</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Dining Furniture</fullName>
                </value>
                <value>
                    <fullName>E-Reader</fullName>
                </value>
                <value>
                    <fullName>Fax Machine</fullName>
                </value>
                <value>
                    <fullName>Golf Clubs</fullName>
                </value>
                <value>
                    <fullName>Hard-Drive</fullName>
                </value>
                <value>
                    <fullName>IWB</fullName>
                </value>
                <value>
                    <fullName>Lamp</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Mac OS</fullName>
                </value>
                <value>
                    <fullName>Microsoft Office</fullName>
                </value>
                <value>
                    <fullName>Microsoft Windows OS</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Office Tool</fullName>
                </value>
                <value>
                    <fullName>Other Academic Material</fullName>
                </value>
                <value>
                    <fullName>Other Asset</fullName>
                </value>
                <value>
                    <fullName>PE Equipment</fullName>
                </value>
                <value>
                    <fullName>Pen-Drive</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Projector</fullName>
                </value>
                <value>
                    <fullName>Scanner</fullName>
                </value>
                <value>
                    <fullName>School Car</fullName>
                </value>
                <value>
                    <fullName>School Van</fullName>
                </value>
                <value>
                    <fullName>Screen</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Computer</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Academic Resource</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Software/License</fullName>
                </value>
                <value>
                    <fullName>PE Equipment</fullName>
                </value>
                <value>
                    <fullName>Music Instruments</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <label>School Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Type_Drill_Down__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Purchase_Price__c</columns>
        <columns>Expected_Life_Years__c</columns>
        <columns>Current_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Laptops</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <columns>Model__c</columns>
        <columns>Serial__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Current_Value__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_Drill_Down__c</field>
            <operation>equals</operation>
            <value>Laptop</value>
        </filters>
        <label>Laptops</label>
    </listViews>
    <listViews>
        <fullName>Mobile_Phones</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <columns>Model__c</columns>
        <columns>Serial__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Current_Value__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_Drill_Down__c</field>
            <operation>equals</operation>
            <value>Mobile Phone</value>
        </filters>
        <label>Mobile Phones</label>
    </listViews>
    <listViews>
        <fullName>Tablets</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Type_Drill_Down__c</columns>
        <columns>Model__c</columns>
        <columns>Serial__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Current_Value__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_Drill_Down__c</field>
            <operation>equals</operation>
            <value>Tablet</value>
        </filters>
        <label>Tablets</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ID #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>School Assets</pluralLabel>
    <recordTypes>
        <fullName>School_Assets</fullName>
        <active>true</active>
        <label>School Assets</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Purchase_Price_and_Expected_Life</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Purchase_Price__c &lt;&gt; 0,  Expected_Life_Years__c = 0)</errorConditionFormula>
        <errorMessage>You have entered a purchase price so you need to add an expected life</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verife_Type_Drill_Down</fullName>
        <active>true</active>
        <description>Verifies that a Type Drill Down is selected</description>
        <errorConditionFormula>AND(
    TEXT(Type__c)&lt;&gt;&quot;PE Equipment&quot;,
    TEXT(Type__c)&lt;&gt;&quot;Music Instruments&quot;,
    TEXT( Type_Drill_Down__c )=&quot;&quot;
    )</errorConditionFormula>
        <errorDisplayField>Type_Drill_Down__c</errorDisplayField>
        <errorMessage>You must select an Asset Type Drill Down</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Computer_Type</fullName>
        <active>true</active>
        <description>Ensures a Computer Type is selected</description>
        <errorConditionFormula>AND(TEXT( Type__c )=&quot;Computer&quot;,TEXT( Computer_Model__c )=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Computer_Model__c</errorDisplayField>
        <errorMessage>You must select a Computer Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Type</fullName>
        <active>true</active>
        <description>Verifies that an Asset Type is included</description>
        <errorConditionFormula>TEXT(Type__c)=&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You Must Select an Asset Type</errorMessage>
    </validationRules>
</CustomObject>